# News_Agent

./: .env.txt  Makefile  README.md  main.py  news_agent.py  news_hound.py  pyproject.toml  results.txt  steps_to_run_on_Windows.txt
backend/agent/: research_agent.py
backend/research_engine/: app.py  configuration.py  graph.py  graph_debug.py  local_llm.py  prompts.py  research_agent.py
frontend/src/: App.tsx
frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  InputForm.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useStream.ts
search_engines/: duckduckgo.py
