[project]
name = "news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawlee[beautifulsoup]>=1.6.0",
    "ddgs>=9.11.4",
    "fastapi>=0.135.1",
    "google-genai>=1.68.0",
    "langchain-core>=1.2.20",
    "langgraph>=1.1.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "tavily-python>=0.7.23",
    "uvicorn>=0.42.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
